fixed off center list items on mobile nav

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -10,32 +10,33 @@ header {
     .close-icon-wrapper {
       display: none;
     }
-  }
 
-  ul {
-    margin-top: 5rem;
-    position: absolute;
-    inset: 0;
-    background-color: $neutral-very-dk-violet;
-    transition: transform 0.5s ease;
-    transform: translatex(-100vw);
-    z-index: 999;
-    li {
-      font-size: 1.5rem;
-      width: 90%;
-      text-align: center;
-      margin-block: 1.5rem;
-      color: white;
-      padding-block: 0.5rem;
-    }
-    .nav-mobile-decoration {
+    ul {
+      margin-top: 5rem;
       position: absolute;
-      // outline: 2px solid lime;
-      width: 100%;
-      left: 0;
-      bottom: 0;
-      img {
-        min-width: 100vw;
+      inset: 0;
+      background-color: $neutral-very-dk-violet;
+      transition: transform 0.5s ease;
+      transform: translatex(-100vw);
+      z-index: 999;
+      li {
+        font-size: 1.5rem;
+        width: 90%;
+        text-align: center;
+        margin-block: 1.5rem;
+        margin-inline: auto;
+        color: white;
+        padding-block: 0.5rem;
+      }
+      .nav-mobile-decoration {
+        position: absolute;
+        // outline: 2px solid lime;
+        width: 100%;
+        left: 0;
+        bottom: 0;
+        img {
+          min-width: 100vw;
+        }
       }
     }
   }
