--- a/styles/main.css
+++ b/styles/main.css
@@ -122,7 +122,7 @@ header {
 header nav .close-icon-wrapper {
   display: none;
 }
-header ul {
+header nav ul {
   margin-top: 5rem;
   position: absolute;
   inset: 0;
@@ -131,21 +131,22 @@ header ul {
   transform: translatex(-100vw);
   z-index: 999;
 }
-header ul li {
+header nav ul li {
   font-size: 1.5rem;
   width: 90%;
   text-align: center;
   margin-block: 1.5rem;
+  margin-inline: auto;
   color: white;
   padding-block: 0.5rem;
 }
-header ul .nav-mobile-decoration {
+header nav ul .nav-mobile-decoration {
   position: absolute;
   width: 100%;
   left: 0;
   bottom: 0;
 }
-header ul .nav-mobile-decoration img {
+header nav ul .nav-mobile-decoration img {
   min-width: 100vw;
 }
 
